--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,5 @@ MYSQL_ROOT_PASSWORD=root
 MYSQL_DATABASE=db
 MYSQL_USER=user
 MYSQL_PASSWORD=password
+MYSQL_DATA_PATH=mysql_data:/var/lib/mysql
 SA_PASSWORD=YourStrong!Passw0rd
