update port mysql

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-MYSQL_ROOT_PASSWORD=root
+MYSQL_ROOT_PASSWORD=test
 MYSQL_PORT=3306
+MYSQL_PORT_HOST=3307
 MYSQL_DATABASE=db
 MYSQL_USER=user
 MYSQL_PASSWORD=password
