Feat remove file

--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,6 @@ SA_PASSWORD=YourStrong!Passw0rd
 TELEGRAM_TOKEN=
 TELEGRAM_CHAT_ID=
 PATH_FOLDER=
+PATH_REMOVE_FOLDER=
+COUNT_DAY_REMOVE=
 DELETE_FOLDER=1
