--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ MYSQL_PASSWORD=password
 MYSQL_DATA_PATH=mysql_data:/var/lib/mysql
 SA_PASSWORD=YourStrong!Passw0rd
 TELEGRAM_TOKEN=
-TELEGRAM_CHAT_ID=
+TELEGRAM_CHANNEL_ID=
 PATH_FOLDER=
 PATH_REMOVE_FOLDER=
 COUNT_DAY_REMOVE=
