--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   db:
-    image: mysql:8.4   # Menggunakan MySQL versi 8
-    container_name: mysql-service  # Menetapkan nama container untuk db
+    build: .
+    container_name: mysql-service
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
@@ -9,7 +9,7 @@ services:
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     ports:
-      - ${MYSQL_PORT}
+      - ${MYSQL_PORT}:3306
     volumes:
       - ${MYSQL_DATA_PATH}
 
