--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,12 @@ MYSQL_USER=user
 MYSQL_PASSWORD=password
 MYSQL_DATA_PATH=mysql_data:/var/lib/mysql
 SA_PASSWORD=YourStrong!Passw0rd
+POSTGRES_DATABASE=postgresDB
+POSTGRES_USER=user
+POSTGRES_PASSWORD=test
+POSTGRES_PORT=5432
+POSTGRES_DATA_PATH=postgres_data
+
 TELEGRAM_TOKEN=
 TELEGRAM_CHANNEL_ID=
 PATH_FOLDER=
