--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,30 @@
+#MYSQL
 MYSQL_ROOT_PASSWORD=test
 MYSQL_PORT=3306
 MYSQL_DATABASE=db
 MYSQL_USER=user
 MYSQL_PASSWORD=password
 MYSQL_DATA_PATH=mysql_data:/var/lib/mysql
+
+#MSSQL
 SA_PASSWORD=YourStrong!Passw0rd
+
+#PGSQL
 POSTGRES_DATABASE=postgresDB
 POSTGRES_USER=user
 POSTGRES_PASSWORD=test
 POSTGRES_PORT=5432
 POSTGRES_DATA_PATH=postgres_data
 
+#Telegram
 TELEGRAM_TOKEN=
 TELEGRAM_CHANNEL_ID=
+TELEGRAM_API_ID=
+TELEGRAM_API_HASH=
+TELEGRAM_MESSAGE_THREAD_ID=
+
 PATH_FOLDER=
 PATH_REMOVE_FOLDER=
 COUNT_DAY_REMOVE=
 INCLUDE_SUBFOLDER=1
 DISCORD_WEBHOOK_URL=
-TELEGRAM_MESSAGE_THREAD_ID=
