--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,7 @@ TELEGRAM_CHANNEL_ID=
 TELEGRAM_API_ID=
 TELEGRAM_API_HASH=
 TELEGRAM_MESSAGE_THREAD_ID=
+TELEGRAM_API_PORT=2000
 
 PATH_FOLDER=
 PATH_REMOVE_FOLDER=
