--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,7 @@ TELEGRAM_API_ID=
 TELEGRAM_API_HASH=
 TELEGRAM_MESSAGE_THREAD_ID=
 TELEGRAM_API_PORT=2000
+API_BASE_URL=https://api.telegram.org
 
 PATH_FOLDER=
 PATH_REMOVE_FOLDER=
