Feat PgAdmin Web Base

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,11 @@ POSTGRES_PASSWORD=test
 POSTGRES_PORT=5432
 POSTGRES_DATA_PATH=postgres_data
 
+#PGAdmin
+PGADMIN_EMAIL="test@gmail.com"
+PGADMIN_PASSWORD="test"
+PGADMIN_PORT="1200"
+
 #Telegram
 TELEGRAM_TOKEN=
 TELEGRAM_CHANNEL_ID=
