--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,12 @@ MYSQL_DATA_PATH=mysql_data:/var/lib/mysql
 #MSSQL
 SA_PASSWORD=YourStrong!Passw0rd
 
+#RabbitMQ
+RABBIT_PORT=5672
+RABBIT_WEB_PORT=15672
+RABBIT_USERNAME=root
+RABBIT_PASSWORD=test
+
 #PGSQL
 POSTGRES_DATABASE=postgresDB
 POSTGRES_USER=user
