Feat Minio Feature

--- a/.env.example
+++ b/.env.example
@@ -41,5 +41,16 @@ PATH_REMOVE_FOLDER=
 COUNT_DAY_REMOVE=
 INCLUDE_SUBFOLDER=1
 
+#Minio
+MINIO_ROOT_USER=Test
+MINIO_ROOT_PASSWORD=test_password
+MINIO_PORT=9000
+MINIO_UI_PORT=9001
+MINIO_ACCESS_KEY=test_access_key
+MINIO_SECRET_KEY=your-secret-key
+MINIO_FILE_PATH=your-secret-key
+MINIO_RAM=1GB
+MINIO_CPU=1.0
+
 #Discord
 DISCORD_WEBHOOK_URL=
