Adding Env volume on minio docker

--- a/.env.example
+++ b/.env.example
@@ -48,7 +48,7 @@ MINIO_PORT=9000
 MINIO_UI_PORT=9001
 MINIO_ACCESS_KEY=test_access_key
 MINIO_SECRET_KEY=your-secret-key
-MINIO_FILE_PATH=your-secret-key
+MINIO_VOLUME=minio_data
 MINIO_RAM=1GB
 MINIO_CPU=1.0
 
