Dynamic Minio Image for CPU Compatible

--- a/.env.example
+++ b/.env.example
@@ -42,6 +42,7 @@ COUNT_DAY_REMOVE=
 INCLUDE_SUBFOLDER=1
 
 #Minio
+MINIO_IMAGE=minio/minio
 MINIO_ROOT_USER=Test
 MINIO_ROOT_PASSWORD=test_password
 MINIO_PORT=9000
