Feat Redis password

--- a/.env.example
+++ b/.env.example
@@ -53,6 +53,10 @@ MINIO_VOLUME=minio_data
 MINIO_RAM=1GB
 MINIO_CPU=1.0
 
+#Docker
+REDIS_PASSWORD=test
+REDIS_PORT=6379
+
 #Discord
 DISCORD_WEBHOOK_URL=
 
