--- a/docker-compose.redisdb.yml
+++ b/docker-compose.redisdb.yml
@@ -1,9 +1,12 @@
 services:
   redis:
     image: redis:latest
-    container_name: redis-service  # Nama untuk container Redis
+    container_name: redis-service
     restart: always
     ports:
       - "6379:6379"
     mem_limit: ${LIMIT_RAM}g
     cpus: ${LIMIT_CPU}
+    command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}"]
+    environment:
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
