Feat Metabase Admin for monitoring database

--- a/.env.example
+++ b/.env.example
@@ -53,13 +53,20 @@ MINIO_VOLUME=minio_data
 MINIO_RAM=1GB
 MINIO_CPU=1.0
 
-#Docker
+#Redis
 REDIS_PASSWORD=test
 REDIS_PORT=6379
+
+#Metabase
+MB_DB_FILE=/metabase-data/metabase.db
+MB_SETUP_ADMIN_EMAIL=test@gmail.com
+MB_SETUP_ADMIN_PASSWORD=test
+MB_SETUP_ADMIN_NAME=admin
+METABASE_PORT=3000
 
 #Discord
 DISCORD_WEBHOOK_URL=
 
 #Limit Resources
 LIMIT_RAM=1
-LIMIT_CPU=1
+LIMIT_CPU=1.0
