--- a/docker-compose.phpmyadmin.yml
+++ b/docker-compose.phpmyadmin.yml
@@ -5,7 +5,7 @@ services:
     restart: always
     volumes:
       - ./php.ini:/usr/local/etc/php/conf.d/php.ini
-      - ./themes/blueberry:/var/www/html/themes/blueberry
+      - ./themes/blueberry/blueberry:/var/www/html/themes/pmahomme
     ports:
       - "8081:80"
     environment:
